syntax = "proto3";
package config_service;

import "google/protobuf/wrappers.proto";

message EnableGamesRequest { bool enabled = 1; }

message SetFEHashRequest { string hash = 1; }

message PermissionsRequest {
  string username = 1;
  google.protobuf.BoolValue director = 2;
  google.protobuf.BoolValue admin = 3;
  google.protobuf.BoolValue mod = 4;
  google.protobuf.BoolValue bot = 5;
}

message UserRequest { string username = 1; }

message UserResponse {
  string username = 1;
  string uuid = 2;
  string email = 3;
  bool is_bot = 4;
  bool is_director = 5;
  bool is_mod = 6;
  bool is_admin = 7;
}

message ConfigResponse {}

message Announcement {
  string title = 1;
  string link = 2;
  string body = 3;
}

message SetAnnouncementsRequest { repeated Announcement announcements = 1; }

message GetAnnouncementsRequest {}

message AnnouncementsResponse { repeated Announcement announcements = 1; }

message SetSingleAnnouncementRequest {
  Announcement announcement = 1;
  string link_search_string = 2;
}

// ConfigService requires admin authentication, except for the GetAnnouncements
// endpoint.
service ConfigService {
  rpc SetGamesEnabled(EnableGamesRequest) returns (ConfigResponse);

  rpc SetFEHash(SetFEHashRequest) returns (ConfigResponse);
  rpc SetUserPermissions(PermissionsRequest) returns (ConfigResponse);
  rpc GetUserDetails(UserRequest) returns (UserResponse);

  rpc SetAnnouncements(SetAnnouncementsRequest) returns (ConfigResponse);
  rpc GetAnnouncements(GetAnnouncementsRequest) returns (AnnouncementsResponse);
  rpc SetSingleAnnouncement(SetSingleAnnouncementRequest)
      returns (ConfigResponse);
}